--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li2 class="slide" id="slide1">
         <a href="#">
           <p class="caption"></p>
-          <img src="./Imagenes/5.jpg" alt="photo 1">
+          <img src="Imagenes./5.jpg" alt="photo 1">
         </a>
       </li2>
       <li2 class="slide" id="slide2">
