--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <li2 class="slide" id="slide2">
         <a href="#">
           <p class="caption"></p>
-          <img src="Imagenes/1.jpg" alt="photo 2">
+          <img src="./Imagenes/1.jpg" alt="photo 2">
         </a>
       </li2>
       <li2 class="slide" id="slide3">
