--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       <li2 class="slide" id="slide1">
         <a href="#">
           <p class="caption"></p>
-          <img src="Imagenes./5.jpg" alt="photo 1">
+          <img src="Imagenes/5.jpg" alt="photo 1">
         </a>
       </li2>
       <li2 class="slide" id="slide2">
         <a href="#">
           <p class="caption"></p>
-          <img src="./Imagenes/1.jpg" alt="photo 2">
+          <img src="Imagenes/1.jpg" alt="photo 2">
         </a>
       </li2>
       <li2 class="slide" id="slide3">
