--- a/html5/galeria.html
+++ b/html5/galeria.html
@@ -14,17 +14,16 @@
 
 			<hgroup>
 				<h1>"You are my way"</h1>
+                <a class="boton" href="../login.html" target="">Salir</a>
 				</hgroup>
 <header>
 
 <nav>
 			<ul>
 				<li><a href="../index.html"> <span class="primero"><i class="icon icon-home3"></i></span>Inicio</a></li>
-				<li><a href=""><span class="segundo"><i class="icon icon-gift"></i></span>Historia</a>
-					
-				</li>
+				<li><a href="../html5/historia.html"> <span class="primero"><i class="icon icon-home3"></i></span>Historia</a></li>
 				<li><a href="../html5/galeria.html"> <span class="tercero"><i class="icon icon-gift"></i></span>Galeria</a></li>
-				<li><a href="../html5/promociones.html"> <span class="cuarto"><i class="icon icon-gift"></i></span>Video </a></li>
+				<li><a href="../html5/videos.html"> <span class="cuarto"><i class="icon icon-gift"></i></span>Video </a></li>
 				<li><a href="../html5/propuesta.html"> <span class="quinto"><i class="icon icon-gift"></i></span>Propuesta</a></li>
 			</ul>
 		</nav>
@@ -43,58 +42,58 @@
  <section>
             <div id="contenedor">
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/6.jpg"/>
+                    <img src="../Imagenes/f1.jpg"/>
                     <span>Tu y yo </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/7.jpg"/>
+                    <img src="../Imagenes/f2.jpg"/>
                     <span>En donde este un presente y un hermoso futuro</span>
                 </div>
 
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/8.jpg"/>
+                    <img src="../Imagenes/f3.jpeg"/>
                     <span>Tu Familia y mi familia difruten juntos </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/9.jpg"/>
+                    <img src="../Imagenes/f4.jpeg"/>
                     <span>Te prometo cuidarte</span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/10.jpg"/>
+                    <img src="../Imagenes/f5.jpeg"/>
                     <span>Dios nos cuide y guie en todo </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/11.jpg"/>
+                    <img src="../Imagenes/f6.jpeg"/>
                     <span>Tu me encantas </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/12.jpg"/>
+                    <img src="../Imagenes/f12.jpeg"/>
                     <span>Princesa de mis sueños </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/13.jpg"/>
+                    <img src="../Imagenes/f14.jpeg"/>
                     <span>Just the way You are </span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/14.png"/>
+                    <img src="../Imagenes/f9.jpeg"/>
                     <span>Como tu eres yo te voy amar</span>
                 </div onclick="galery(this)">
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/15.jpg"/>
+                    <img src="../Imagenes/f10.jpeg"/>
                     <span>Por ti, un futuro unico y especial</span>
                 </div>
 
                 <div onClick="galery(this)">
-                    <img src="../Imagenes/16.jpg"/>
+                    <img src="../Imagenes/f11.jpeg"/>
                     <span>Sin arrepentirme de aquel mensaje </span>
                 </div>
             </div>
