--- a/html5/propuesta - copia.html
+++ b/html5/propuesta - copia.html
@@ -49,13 +49,13 @@
 
 <section>
 <div id="contenedor3">
-<marquee loop = "1" scrollamount="15"><img src="../Imagenes/num5.png" width="200" height="200" alt="" /> <img src="../Imagenes/num4.png" width="200" height="200" alt="" /><img src="../Imagenes/num3.png" width="200" height="200" alt="" /><img src="../Imagenes/num2.png" width="200" height="200" alt="" /><img src="../Imagenes/num1.png" width="200" height="200" alt="" /><img src="../Imagenes/punto.png" width="735" height="339" alt="" /> </marquee>
+<marquee loop = "1"><img src="../Imagenes/num5.png" width="200" height="200" alt="" /> <img src="../Imagenes/num4.png" width="200" height="200" alt="" /><img src="../Imagenes/num3.png" width="200" height="200" alt="" /><img src="../Imagenes/num2.png" width="200" height="200" alt="" /><img src="../Imagenes/num1.png" width="200" height="200" alt="" /><img src="../Imagenes/punto.png" width="735" height="339" alt="" /> </marquee>
 
 <h2 class="animated bounceInRight delay-20s"><img src="../Imagenes/QUIERES.png" width="400" height="700" alt=""/><img src="../Imagenes/SER.png" width="400" height="700" alt="" /><img src="../Imagenes/MI.png" width="300" height="400" alt="" /><img src="../Imagenes/NOVIA.png" width="300" height="400" alt="" /></h2> 
 
 
-<b class="btn-flotante " onclick="si()" ><h4 class="animated bounceInDown delay-20s">SI 😍</h4></b>
-<b class="btn-flotante1"><h4 class="animated bounceInDown delay-20s">NO 💔</h4> </b>
+<b class="btn-flotante " onclick="si()" ><h4 class="animated bounceInDown delay-20s">SI</h4></b>
+<b class="btn-flotante1"><h4 class="animated bounceInDown delay-20s">NO :(</h4> </b>
 
 
 
