--- a/html5/videos.html
+++ b/html5/videos.html
@@ -48,42 +48,56 @@
     <div class="feature-img">
       <img src="../Imagenes/f1.jpg" width="100%">
        <img src="../Imagenes/play.png" class="play-btn"
-       onclick="playVideo('../Videos/V1.mp4')">
+       onclick="playVideo('../Videos/V5.mp4')">
     </div>
     </div>
     <div class="col">
         <div class="small-img-row">
           <div class="small-img">
-            <img src="../Imagenes/f2.jpg">
+            <img src="../Imagenes/f19.jpeg">
             <img src="../Imagenes/play.png" class="play-btn"
-            onclick="playVideo('../Videos/V1.mp4')">
+            onclick="playVideo('../Videos/V3.mp4')">
           </div>
-          <p>How to add multiple videos in a website or <br>to make a video gallery  </p>
+          <p>WOOOW mi amor mi todo ha llegado este momento  <br>eres todo para mi ♥ no sabes las ganas que he tenido de llegar a esto   </p>
         </div>
 
 
 
          <div class="small-img-row">
           <div class="small-img">
-            <img src="../Imagenes/f2.jpg">
+            <img src="../Imagenes/f18.jpeg">
             <img src="../Imagenes/play.png" class="play-btn"
-            onclick="playVideo('../Videos/V1.mp4')">
+            onclick="playVideo('../Videos/V4.mp4')">
           </div>
-          <p>How to add multiple videos in a website or <br>to make a video gallery  </p>
+          <p>Yami te quiero a mi lado toma mi mano  <br> me encanta estar a tu lado y no soltarte jamas  pero jamas 💑 </p>
         </div>
 
 
          <div class="small-img-row">
           <div class="small-img">
-            <img src="../Imagenes/f2.jpg">
+            <img src="../Imagenes/f17.jpeg">
             <img src="../Imagenes/play.png" class="play-btn"
-            onclick="playVideo('../Videos/V1.mp4')">
+            onclick="playVideo('../Videos/V2.mp4')">
           </div>
-          <p>How to add multiple videos in a website or <br>to make a video gallery  </p>
+          <p>aun que me comporte como un tonto sabras que te quiero mas que a nada en este mundo  <br>Gracias por todo por hacerme feliz en todo momento👫   </p>
+        </div>
+
+
+
+        <div class="small-img-row">
+          <div class="small-img">
+            <img src="../Imagenes/f15.jpeg">
+            <img src="../Imagenes/play.png" class="play-btn"
+            onclick="playVideo('../Videos/V6.mp4')">
+          </div>
+          <p>Y si no existieras yo te inventaria eres la mujer perfecta que <br>eres el regalo que a Dios le he pedido tanto tiempo eres Tu 💞😍</p>
         </div>
     </div>
     </div>
     </div>
+
+
+
 
 
     <div class="video-player" id="videoPlayer">
@@ -94,7 +108,13 @@
        onclick="stopvideo()">
 
 </div>
-
+<div class="youtube">
+   <iframe width="500" height="315" src="https://www.youtube.com/embed/Uykdd261LcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+   <iframe width="500" height="315" src="https://www.youtube.com/embed/K2DLzSZElOo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><
+   <iframe width="500" height="315" src="https://www.youtube.com/embed/craAcv415FM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+   <iframe width="500" height="315" src="https://www.youtube.com/embed/wKqBRpouHa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="500" height="315" src="https://www.youtube.com/embed/7hgwPdW9vbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
 
 
 
@@ -113,7 +133,7 @@ myVideo.src = file;
 videoPlayer.style.display = "block";
 }
 
-</script>>
+</script>
 
 <footer>
  
