--- a/html5/galeria.html
+++ b/html5/galeria.html
@@ -6,6 +6,8 @@
 <title>You are my way</title>
 <link rel="stylesheet"type="text/css" href="../css/css.css">
 <link rel="stylesheet"type="text/css" href="../css/fonts.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
 <body>
