--- a/html5/historia.html
+++ b/html5/historia.html
@@ -7,6 +7,8 @@
 
 <link rel="stylesheet"type="text/css" href="../css/historia.css">
 <link rel="stylesheet"type="text/css" href="../css/fonts.css">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="../plugins/animate.css">
 </head>
 
