--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <link rel="shortcut icon" href="Imagenes/R.png">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta charset="UTF-8">
 <title>You are my way</title>
 <link rel="stylesheet"type="text/css" href="css/estilo.css">
