--- a/html5/propuesta.html
+++ b/html5/propuesta.html
@@ -27,7 +27,7 @@
 				<li><a href="../index.html"> <span class="primero"><i class="icon icon-home3"></i></span>Inicio</a></li>
 				<li><a href="../html5/historia.html"> <span class="primero"><i class="icon icon-home3"></i></span>Historia</a></li>
 				<li><a href="../html5/galeria.html"> <span class="tercero"><i class="icon icon-gift"></i></span>Galeria</a></li>
-				<li><a href="../html5/Videos.html"> <span class="cuarto"><i class="icon icon-gift"></i></span>Video </a></li>
+				<li><a href="../html5/videos.html"> <span class="cuarto"><i class="icon icon-gift"></i></span>Video </a></li>
 				<li><a href="../html5/propuesta.html"> <span class="quinto"><i class="icon icon-gift"></i></span>Propuesta</a></li>
 			</ul>
 			
