--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 
 			<hgroup>
-				<h1>"You are my way"</h1>
+				<h1>"YOU ARE MY WAY"</h1>
         <a class="boton" href="login.html" target="">Salir</a>
 				</hgroup>
 <header>
