--- a/html5/historia.html
+++ b/html5/historia.html
@@ -59,20 +59,32 @@
 <img src="../Imagenes/lit.png"  width="100" height="100"></div>
 <br>
 
-<h3 class="animated bounceInRight delay-20s"><img src="../Imagenes/1.png"  width="600" height="600"></h3>
-<br>
-<div id="cajita2">
-<h3 class="animated bounceInLeft delay-20s"><img src="../Imagenes/2.png"  width="1000" height="600"></h3></div>
-<br>
 
-<h3 class="animated jackInTheBox delay-20s"><img src="../Imagenes/3.png"  width="600" height="600"></h3>
+<div id="cajita1">
+<h3 class="animated bounceInRight delay-20s"><img src="../Imagenes/1.png"  width="400" height="400"></h3>
+</div>
+
 <br>
 <div id="cajita2">
-<h3 class="animated flipInY delay-20s"><img src="../Imagenes/4.png"  width="600" height="600">
-<br></h3></div>
+<h3 class="animated bounceInLeft delay-20s"><img src="../Imagenes/2.png"  width="600" height="400"></h3></div>
+<br>
 <div id="cajita3">
-<h3 class="animated flipInX delay-20s"><img src="../Imagenes/5.png"  width="600" height="600"></h3>
+<h3 class="animated jackInTheBox delay-20s"><img src="../Imagenes/3.png"  width="400" height="400"></h3>
 </div>
+<br>
+<div id="cajita4">
+<h3 class="animated flipInY delay-20s"><img src="../Imagenes/4.png"  width="400" height="400">
+<br></h3></div>
+<div id="cajita5">
+<h3 class="animated flipInX delay-20s"><img src="../Imagenes/5.png"  width="400" height="400"></h3>
+</div>
+<div id="cajita6">
+<h3 class="animated flipInX delay-20s"><img src="../Imagenes/6.png"  width="500" height="500"></h3>
+</div>
+
+
+
+
 	</style>
 	
  
